@@ -1,5 +1,16 @@
 2003-10-31  Andrew Cagney  <cagney@redhat.com>
 
+	* defs.h (XZALLOC): Define.
+	* target.h (struct target_ops): Add "to_data";
+	* bfd-target.h, bfd-target.c: New files.
+	* Makefile.in (SFILES): Add "bfd-target.c".
+	(COMMON_OBS): Add "bfd-target.o".
+	(bfd-target.o): Specify dependencies.
+	(bfd_target_h): Define.
+	* defs.h (XZALLOC): Define.
+
+2003-10-31  Andrew Cagney  <cagney@redhat.com>
+
 	* rs6000-tdep.c (rs6000_gdbarch_init): For 64-bit ABI, set
 	adjust_breakpoint_address.
 	* Makefile.in (ppc-sysv-tdep.o): Add $(target_h).
